cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(my_sensors)
find_package(gazebo REQUIRED)
include_directories(${GAZEBO_INCLUDE_DIRS})
link_directories(${GAZEBO_LIBRARY_DIRS})
list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
add_library(my_sensors SHARED my_sensors.cc)
target_link_libraries(my_sensors ${GAZEBO_LIBRARIES})
